# taf

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
code/include/: DCoordinates.h  DTLinkDef.h  MAlign.h  MAnalysis.h
code/src/: MAlign.cxx  MAnalysis.cxx  MCommands.cxx  MPost.cxx  MPrep.cxx
tests/unit/: CMakeLists.txt  MAnalysis_UT.cpp
tests/unit/MimosaAnalysisTests/: CMakeLists.txt  test_CheckIfDone.cpp  test_CreateGlobalResultDir.cpp  test_SetClusterGeometricalType.cpp
